--- a/prices.html
+++ b/prices.html
@@ -147,10 +147,12 @@
                     <h2 class="prices-header title">Price Menu</h2>
                     <div class="service-price-wrapper">
                         <h3 class="prices-title title">Treatments</h3>
-                        <span class="prices-text price-padding"><a href="https://cal.com/hello3/30min">Initiation</a></span><span class="cost prices-text price-padding"><strong>3000</strong></span>
-                        <span class="prices-text"><a href="https://cal.com/hello3/60-min-traditional-thai-massage">Pain relief</a></span><span class="cost prices-text"><strong>3000</strong></span>
-                        <span class="prices-text"><a href="https://cal.com/hello3/90-min-massage">Fountain of youth</a> </span><span class="cost prices-text"><strong>4000</strong></span>
-                        <span class="prices-text"><a href="https://cal.com/hello3/120-min-massage">Exorcisms</a>  </span><span class="cost prices-text"><strong>4000</strong></span> 
+                        <span class="prices-text price-padding"><a href="https://cal.com/hello33/120-min-massage">Initiation</a></span><span class="cost prices-text price-padding"><strong>3000</strong></span>
+                        <span class="prices-text"><a href="https://cal.com/hello33/120-min-massage">Pain relief</a></span><span class="cost prices-text"><strong>3000</strong></span>
+                        <span class="prices-text"><a href="https://cal.com/hello33/120-min-massage">Fountain of youth</a> </span><span class="cost prices-text"><strong>3000</strong></span>
+                        <span class="prices-text"><a href="https://cal.com/hello33/120-min-massage">Exorcisms</a>  </span><span class="cost prices-text"><strong>3000</strong></span> 
+                        <span class="prices-text"><a href="https://cal.com/hello33/secret">consultation</a>  </span><span class="cost prices-text"><strong>Free</strong></span> 
+
                         <i class="leaf prices-leaf fas fa-seedling"></i>  <!--just ad another 3 to the heloo3-->
                     </div>
                     <div class="packages-wrapper">
